[package]
name = "spinel"
description = "An operating system built for educational purposes"
version = "0.1.0"
authors = ["Ruby Lazuli L. <nipkraps@gmail.com>"]
license = "MIT"
edition = "2018"

[features]
default = ["serial_logging"]
serial_logging = []

[dependencies]
bootloader = "0.9.4"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
num-traits = { version = "0.2", default-features = false }
num-derive = { version = "0.3", default-features = false }
spin = "0.5.2"
x86_64 = "0.11.0"

[package.metadata.bootimage]
# The command invoked with the created bootimage
run-command = [
    "qemu-system-x86_64", "-drive", "format=raw,file={}", "-serial", "stdio"
]
