[package]
name = "spinel"
description = "An operating system built for educational purposes"
version = "0.1.0"
authors = ["Ruby Lazuli L. <nipkraps@gmail.com>"]
license = "MIT"
edition = "2018"

[unstable]
build-std = ["core", "compiler_builtins", "alloc"]

[features]
default = ["serial_logging"]
serial_logging = []

[dependencies]
cfg-if = "1.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
num-traits = { version = "0.2", default-features = false }
num-derive = { version = "0.3", default-features = false }
spin = "0.9.2"

[target.'cfg(target_arch = "x86_64")'.dependencies]
bootloader = "0.10.6"
x86_64 = "0.14.4"

# TODO: how can this be restricted to x86_64 only? Does it need to be?
[package.metadata.bootimage]
run-command = [
    "qemu-system-x86_64", "-drive", "format=raw,file={}", "-serial", "stdio",
    "--enable-kvm", "-s"
]

[package.metadata.bootloader]
# 16 pages for the stack * 4 KiB per page = 64 KiB stack
kernel-stack-address = "0xFFFF800000000000"
kernel-stack-size = 15
boot-info-address = "0xFFFF800100000000"
physical-memory-offset = "0xFFFF900000000000"
map-physical-memory = true
target = "x86_64-unknown-spinel_kernel"
